# git-workers

./: .git-workers.toml  .gitignore  .octocov.yml  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  lefthook.yml  package.json  setup.sh
.github/: FUNDING.yml  cliff.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: coding-style.md  coverage-improvement-plan.md
shell/: gw.sh
src/: commands.rs  config.rs  constants.rs  file_copy.rs  git.rs  git_interface.rs  hooks.rs  input_esc_raw.rs  lib.rs  main.rs  menu.rs  repository_info.rs  ui.rs  utils.rs
src/commands/: create.rs  delete.rs  list.rs  mod.rs  rename.rs  shared.rs  switch.rs
src/core/: mod.rs  validation.rs
src/git_interface/: mock_git.rs  mod.rs  real_git.rs
src/infrastructure/: file_copy.rs  filesystem.rs  git.rs  hooks.rs  mod.rs
tests/: README.md  api_contract_basic_test.rs  batch_delete_renamed_test.rs  batch_delete_test.rs  color_output_test.rs  commands_comprehensive_test.rs  commands_extensive_test.rs  commands_internal_stable_test.rs  commands_test.rs  comprehensive_commands_test.rs  config_comprehensive_test.rs  config_load_test.rs  config_lookup_test.rs  config_root_lookup_test.rs  config_tests.rs  constants_validation_test.rs  create_worktree_from_tag_test.rs  create_worktree_integration_test.rs  custom_path_behavior_test.rs  debug_filesystem_test.rs  debug_rename_test.rs  edge_cases_test.rs  edit_hooks_test.rs  esc_cancel_test.rs  file_copy_size_test.rs  file_copy_test.rs  filesystem_abstraction_test.rs  final_verification_test.rs  first_worktree_pattern_test.rs  git_advanced_operations_test.rs  git_advanced_test.rs  git_comprehensive_test.rs  git_interface_migrate_test.rs  git_interface_mock_test.rs  git_read_operations_test.rs  git_tests.rs  hooks_comprehensive_test.rs  hooks_public_api_test.rs  hooks_test.rs  input_esc_raw_test.rs  (+66 more)
tests/common/: mod.rs  test_repo.rs  test_ui.rs
tests/e2e/: mod.rs  workflow.rs
tests/integration/: git_flow.rs  list_ui_display_test.rs  multi_repo.rs  repository_info_display_test.rs  worktree_lifecycle.rs
tests/performance/: bench.rs  benchmark.rs  mod.rs
tests/unit/commands/: create.rs  delete.rs  list.rs  mod.rs  prune.rs  rename.rs  switch.rs  sync.rs
tests/unit/core/: constants.rs  error_handling.rs  mod.rs  repository_info.rs  utils.rs  validation.rs
tests/unit/infrastructure/: git.rs  hooks.rs  mod.rs
tests/unit/ui/: mod.rs
