[package]
name = "git-workers"
version = "0.6.0"
edition = "2021"
authors = ["Daichi Furiya"]
description = "Interactive Git worktree manager with shell integration"
readme = "README.md"
repository = "https://github.com/wasabeef/git-workers"
license = "MIT OR Apache-2.0"
keywords = ["git", "worktree", "cli", "interactive", "management"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gw"
path = "src/main.rs"

[dependencies]
# Git Operations
git2 = { version = "0.20", features = ["vendored-openssl"] }

# CLI Framework
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error Handling
anyhow = "1.0"

# Utility
colored = "3.0"
chrono = "0.4"
fuzzy-matcher = "0.3"
indicatif = "0.17"
unicode-width = "0.2.1"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
