[package]
name = "git-workers"
version = "0.6.1"
edition = "2021"
authors = ["Daichi Furiya"]
description = "Interactive Git worktree manager with shell integration"
readme = "README.md"
repository = "https://github.com/wasabeef/git-workers"
license = "MIT OR Apache-2.0"
keywords = ["git", "worktree", "cli", "interactive", "management"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gw"
path = "src/main.rs"

[dependencies]
# Git Operations
git2 = { version = "0.20", features = ["vendored-openssl"] }

# CLI Framework
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error Handling
anyhow = "1.0"

# Utility
colored = "3.0"
chrono = "0.4"
fuzzy-matcher = "0.3"
indicatif = "0.17"
unicode-width = "0.2.1"

[dev-dependencies]
# Basic test utilities
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"

# Additional test utilities
serial_test = "3.2"  # For tests that need sequential execution
mockall = "0.13"     # For mocking in unit tests
test-case = "3.3"    # For parameterized tests
proptest = "1.5"     # For property-based testing
criterion = "0.5"    # For benchmarking (performance tests)
fake = "2.10"        # For generating test data
rstest = "0.23"      # For fixture-based testing

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
